Fix overflow behavior for various panes in application panel.
Fixed: chromium:1523512
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5250277
Auto-Submit: Wolfgang Beyer <wolfi@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/application/components/reportingApiGrid.css
+++ b/front_end/panels/application/components/reportingApiGrid.css
@@ -29,6 +29,7 @@
   font-size: 13px;
   color: var(--sys-color-token-subtle);
   min-width: min-content;
+  text-align: center;
 }
 
 devtools-data-grid-controller {
