--- a/front_end/panels/application/reportingApiReportsView.css
+++ b/front_end/panels/application/reportingApiReportsView.css
@@ -10,6 +10,7 @@
   font-size: 13px;
   color: var(--sys-color-token-subtle);
   overflow: auto;
+  text-align: center;
 
   & div {
     width: 100%;
