--- a/front_end/panels/application/sharedStorageEventsView.css
+++ b/front_end/panels/application/sharedStorageEventsView.css
@@ -14,6 +14,7 @@ devtools-shared-storage-access-grid {
   font-size: 13px;
   color: var(--sys-color-token-subtle);
   overflow: auto;
+  text-align: center;
 
   & div {
     width: 100%;
